Update and rename todo.md to hd140.md

--- a/LDARC HD-140/hd140.md
+++ b/LDARC HD-140/hd140.md
@@ -1,4 +1,7 @@
-# TODO LDARC HD-140
+# LDARC HD-140
+
+## TODO
+
 - Configurar OSD padrão ✔
 - Verificar fonte "Digital" no OSD ✔
 - Testar alterações no ESC (ver se continua flipando)
