--- a/LDARC HD-140/hd140.md
+++ b/LDARC HD-140/hd140.md
@@ -7,3 +7,4 @@
 - Testar alterações no ESC (ver se continua flipando)
 - Câmera muito ruim. Dificuldade de enxergar quando troca de claro para escuro. Demora para clarear.
 - Verificar sensor de tensão da bateria.
+- Desenhar e imprimir mount traseir opara antena, leds e xt30
